# chaos-stability-probe

./: .gitignore  AGENTS.md  README.md  _config.yml  prior_art.md  pyproject.toml  raw_initial_discussion.txt  requirements.txt  sagemaker_entry.py
configs/: activation_patch_targets_v1.json  activation_patch_targets_v2.json  activation_patch_targets_v3.json  activation_patch_targets_v4_reverse.json  activation_patch_targets_v5_replication.json  models.json  prompt_pairs.json  prompt_pairs_expanded.json  prompt_pairs_longprobe.json  prompt_pairs_mechinterp_seed.json  prompt_pairs_micro_500.json  prompt_pairs_robust.json  prompt_pairs_sampling_demo.json  prompt_pairs_scaled.json  sagemaker_queue.json  sagemaker_queue_activation_patch_v1.json  sagemaker_queue_activation_patch_v2.json  sagemaker_queue_activation_patch_v3.json  sagemaker_queue_activation_patch_v4_reverse.json  sagemaker_queue_activation_patch_v5_replication.json  sagemaker_queue_logit_token_cert_v1.json  sagemaker_queue_paper_repairs_v1.json  sagemaker_queue_silent_divergence_pilot_v1.json  sagemaker_queue_token_certified_v3.json  sagemaker_queue_token_micro.json  sagemaker_queue_token_micro_v2.json
docs/: answer_alignment_detection.md  chart_integrity_audit.md  experiment_index.md  experiment_journal.md  north_star.md  presenter_notes.md  prior_art.md  rebuttals.md  research_agenda.md  results_digest.md  talk_outline.md  task_list.md
scripts/: activation_patch_branch.py  add_semantic_metrics.py  analyze_branch_points.py  analyze_branch_prediction.py  analyze_content_only.py  analyze_scaffold_correlation.py  (+56 more)
(+48 files in other folders)
